Added user service; Added update info func
